--- a/packages/rxjs-browser/package.json
+++ b/packages/rxjs-browser/package.json
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "favicons-webpack-plugin": "0.0.9",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
